--- a/style.css
+++ b/style.css
@@ -45,6 +45,10 @@ body{
     position: sticky;
     top: 10px;
 }
+.divider-block{
+    border-bottom: 2px solid black;
+    margin: 25px 0 0 0;
+}
 .nav{
     display: inline-block;
     font-weight: 700;
