--- a/style.css
+++ b/style.css
@@ -76,7 +76,8 @@ body{
 }
 .bold-text{
     font-family: Rylan;
-    font-size: 2em;
+    font-size: 2.5em;
+    line-height: 2.5em;
     margin: 5px 0;
     color: #262626;
 }
