--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ body{
 .bold-text{
     font-family: Rylan;
     font-size: 2.5em;
-    line-height: 2.5em;
+    line-height: 2.5rem;
     margin: 5px 0;
     color: #262626;
 }
