--- a/style.css
+++ b/style.css
@@ -92,7 +92,8 @@ body{
     color: #262626;
 }
 .hyperlink{
-    text-decoration: underline;
+    /*text-decoration: underline;*/
+    border-bottom: 3px solid #4286f4;
 }
 a{
     color: #262626;
