--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ body{
     font-family: Rylan;
     font-size: 2.5em;
     line-height: 2.5rem;
-    margin: 5px 0;
+    margin: 15px 0 5px 0;
     color: #262626;
 }
 .body-text{
