--- a/style.css
+++ b/style.css
@@ -47,6 +47,8 @@ body{
 }
 .website-image{
     width: 100%;
+    -webkit-box-shadow: 0px 0px 26px -1px rgba(0,0,0,0.44); 
+    box-shadow: 0px 0px 26px -1px rgba(0,0,0,0.44);
 }
 .images-box{
     margin: 30px auto;
