--- a/style.css
+++ b/style.css
@@ -51,6 +51,9 @@ body{
 .images-box{
     margin: 30px auto;
 }
+.blue-border{
+    border: 1px solid #EAF1F4;
+}
 /*#center-box{
     display: flex;
     display: -webkit-flex;
